@@ -6,6 +6,15 @@ Description: \n\r\
 Makes the mob do goofy things, lowers attack and dex scores.  May result in a \
 migraine.
 
+ANESTHESIA=POISON_ANESTHESIA
+POISON_ANESTHESIA=\
+Ability    : Anesthesia\n\r\
+Parameters : \n\r\
+Example    : \n\r\
+Description: \n\r\
+Gives a small constitution boost, hides damage amounts, harmful screams, and the \
+need to flee.
+
 BEE_STING=POISON_BEESTING
 POISON_BEESTING=\
 Ability    : Bee Sting\n\r\
