@@ -1,4 +1,4 @@
-roofie	FOOD	Poison_Slumberall	1	LAMPOIL	1	CHICKEN	1										
-poppy milk	DRINK	Poison_Slumberall	1	POPPY	1	MILK	1										
+roofie	FOOD	Poison_Slumberall	1	CHAMOMILE	1	CHICKEN	1										
+poppy milk	DRINK	Poison_Anesthesia	1	POPPY	1	MILK	1										
 theriac	FOOD	Prayer_CureLight	1	POPPY	1	LIQUOR	1										
-mandragora	FOOD	Prayer_CureLight	1	POPPY	1	LIQUOR	1										
+mandragora	FOOD	Poison_Hallucinogen	1	POPPY	1	LIQUOR	1										
